adopt-a-pup/notification-service-templates/email-service-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: email-service
    app.kubernetes.io/component: email-service
    app.kubernetes.io/instance: email-service
  name: email-service
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: email-service
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: email-service
    spec:
      containers:
      - env:
        - name: smtp
          value: "1025"
        - name: web
          value: "1080"
        imagePullPolicy: Always
        name: email-service
        ports:
        - containerPort: 25
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: maildev
      serviceAccountName: maildev
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - email-service
      from:
        kind: ImageStreamTag
        name: email-service:latest
        namespace: adopt-a-pup
    type: ImageChange
