adopt-a-pup/notification-service-templates/notification-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: notification-service
    app.kubernetes.io/component: notification-service
    app.kubernetes.io/instance: notification-service
  name: notification-service
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: notification-service
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: notification-service
    spec:
      containers:
      - env:
        - name: spring.mail.host
          value: email-service
        imagePullPolicy: Always
        name: notification-service
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - notification-service
      from:
        kind: ImageStreamTag
        name: notification-service:latest
        namespace: adopt-a-pup
    type: ImageChange
