adopt-a-pup/notification-service-templates/email-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-service
    app.kubernetes.io/component: email-service
    app.kubernetes.io/instance: email-service
  name: email-service
spec:
  ports:
  - name: 25-tcp
    port: 25
    protocol: TCP
    targetPort: 25
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    deploymentconfig: email-service
  sessionAffinity: None
  type: ClusterIP
