adopt-a-pup/notification-service-templates/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notification-service
    app.kubernetes.io/component: notification-service
    app.kubernetes.io/instance: notification-service
  name: notification-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    deploymentconfig: notification-service
  sessionAffinity: None
  type: ClusterIP
